@@ -126,6 +126,11 @@ enum guCommandIds {
     ID_RATING_EDITTRACKS,
     ID_RATING_COPYTO,
     //
+    ID_PLAYCOUNT_PLAY,
+    ID_PLAYCOUNT_ENQUEUE,
+    ID_PLAYCOUNT_EDITTRACKS,
+    ID_PLAYCOUNT_COPYTO,
+    //
     ID_SONG_PLAY,
     ID_SONG_PLAYALL,
     ID_SONG_ENQUEUE,
